tabLayout和ViewPager的联动搭建完成

--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -2,6 +2,8 @@
 <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/drawer_layout"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:openDrawer="left"
     android:layout_width="match_parent"
     android:fitsSystemWindows="true"
     android:background="#ffffff"
@@ -10,17 +12,35 @@
         android:layout_width="match_parent"
         android:orientation="vertical"
         android:layout_height="match_parent">
-        <android.support.v7.widget.Toolbar
+        <android.support.design.widget.AppBarLayout
+            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:background="?attr/colorPrimary"
-            android:layout_height="?attr/actionBarSize"
-            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-            android:id="@+id/toolbar"></android.support.v7.widget.Toolbar>
-        <FrameLayout
+            android:layout_height="wrap_content">
+            <android.support.v7.widget.Toolbar
+                android:layout_width="match_parent"
+                android:background="?attr/colorPrimary"
+                android:layout_height="?attr/actionBarSize"
+                app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+                android:id="@+id/toolbar"/>
+            <android.support.design.widget.TabLayout
+                app:tabSelectedTextColor="@color/white"
+                app:tabTextColor="@color/white"
+                app:tabIndicatorColor="@color/white"
+                android:id="@+id/tl"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+
+        </android.support.design.widget.AppBarLayout>
+        <android.support.v4.view.ViewPager
+            android:id="@+id/vp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+        </android.support.v4.view.ViewPager>
+        <!--<FrameLayout
             android:layout_width="match_parent"
             android:id="@+id/container"
-            android:layout_height="match_parent"></FrameLayout>
+            android:layout_height="match_parent"></FrameLayout>-->
     </LinearLayout>
     <android.support.design.widget.NavigationView
         android:layout_width="wrap_content"
@@ -31,5 +51,5 @@
         app:itemTextColor="@color/colorPrimary"
         app:elevation="100dp"
         app:headerLayout="@layout/headerlayout"
-        app:menu="@menu/drawer_menu"></android.support.design.widget.NavigationView>
+        app:menu="@menu/drawer_menu"/>
 </android.support.v4.widget.DrawerLayout>
