--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -1,55 +1,73 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/drawer_layout"
-    xmlns:tools="http://schemas.android.com/tools"
-    tools:openDrawer="left"
-    android:layout_width="match_parent"
-    android:fitsSystemWindows="true"
-    android:background="#ffffff"
-    android:layout_height="match_parent">
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:orientation="vertical"
-        android:layout_height="match_parent">
-        <android.support.design.widget.AppBarLayout
-            android:orientation="vertical"
+                                        xmlns:app="http://schemas.android.com/apk/res-auto"
+                                        xmlns:tools="http://schemas.android.com/tools"
+                                        android:id="@+id/drawer_layout"
+                                        tools:openDrawer="left"
+                                        android:layout_width="match_parent"
+                                        android:fitsSystemWindows="true"
+                                        android:background="#ffffff"
+                                        android:layout_height="match_parent"
+        >
+
+    <android.support.design.widget.CoordinatorLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:orientation="vertical"
+            android:layout_height="match_parent"
+            >
+
+        <android.support.design.widget.AppBarLayout
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                >
+
             <android.support.v7.widget.Toolbar
-                android:layout_width="match_parent"
-                android:background="?attr/colorPrimary"
-                android:layout_height="?attr/actionBarSize"
-                app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-                android:id="@+id/toolbar"/>
+
+                    app:layout_scrollFlags="scroll|enterAlways"
+                    android:layout_width="match_parent"
+                    android:background="?attr/colorPrimary"
+                    android:layout_height="?attr/actionBarSize"
+                    app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+                    android:id="@+id/toolbar"
+                    />
+
             <android.support.design.widget.TabLayout
-                app:tabSelectedTextColor="@color/white"
-                app:tabTextColor="@color/white"
-                app:tabIndicatorColor="@color/white"
-                android:id="@+id/tl"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                    app:tabGravity="fill"
+                    app:tabMode="fixed"
+                    app:tabSelectedTextColor="@color/white"
+                    app:tabTextColor="@color/white"
+                    app:tabIndicatorColor="@color/white"
+                    android:id="@+id/tl"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    />
 
         </android.support.design.widget.AppBarLayout>
+
         <android.support.v4.view.ViewPager
-            android:id="@+id/vp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-        </android.support.v4.view.ViewPager>
+                app:layout_behavior="@string/appbar_scrolling_view_behavior"
+                android:id="@+id/vp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                />
+
         <!--<FrameLayout
             android:layout_width="match_parent"
             android:id="@+id/container"
             android:layout_height="match_parent"></FrameLayout>-->
-    </LinearLayout>
+    </android.support.design.widget.CoordinatorLayout>
+
     <android.support.design.widget.NavigationView
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:id="@+id/navigationView"
-        android:layout_gravity="start"
-        android:background="@color/white"
-        app:itemTextColor="@color/colorPrimary"
-        app:elevation="100dp"
-        app:headerLayout="@layout/headerlayout"
-        app:menu="@menu/drawer_menu"/>
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:id="@+id/navigationView"
+            android:layout_gravity="start"
+            android:background="@color/white"
+            app:itemTextColor="@color/colorPrimary"
+            app:elevation="100dp"
+            app:headerLayout="@layout/headerlayout"
+            app:menu="@menu/drawer_menu"
+            />
 </android.support.v4.widget.DrawerLayout>
