--- a/app/src/main/res/layout/fragment_ip.xml
+++ b/app/src/main/res/layout/fragment_ip.xml
@@ -1,41 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
- <LinearLayout
-     android:layout_alignParentTop="true"
-     android:layout_marginTop="10dp"
-     android:layout_width="match_parent"
-     android:orientation="horizontal"
-     android:id="@+id/linear"
-     android:layout_height="wrap_content">
-     <EditText
-         android:id="@+id/et"
-         android:layout_weight="1"
-         android:hint="请输入要查询的IP"
-         android:layout_width="match_parent"
-         android:layout_height="wrap_content" />
-     <Button
-         android:id="@+id/btn"
-         android:layout_weight="4"
-         android:text="查询"
-         android:layout_width="match_parent"
-         android:layout_height="wrap_content" />
- </LinearLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-    <TextView
-        android:layout_below="@id/linear"
-        android:id="@+id/tv"
-        android:layout_marginTop="10dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!" />
-    <ProgressBar
-        android:layout_width="wrap_content"
-        android:layout_centerInParent="true"
-        android:visibility="gone"
-        android:id="@+id/pb"
-        android:layout_height="wrap_content" />
-</RelativeLayout>
+        <LinearLayout
+            android:id="@+id/linear"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_marginTop="10dp"
+            android:orientation="horizontal">
+
+            <EditText
+                android:id="@+id/et"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:hint="请输入要查询的IP" />
+
+            <Button
+                android:id="@+id/btn"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="4"
+                android:text="查询" />
+        </LinearLayout>
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="5000dp"
+            android:layout_below="@id/linear">
+            <TextView
+                android:id="@+id/tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:text="Hello World!" />
+        </LinearLayout>
+
+        <ProgressBar
+            android:id="@+id/pb"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:visibility="gone" />
+    </RelativeLayout>
+</android.support.v4.widget.NestedScrollView>
