--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -1,58 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                                        xmlns:app="http://schemas.android.com/apk/res-auto"
-                                        xmlns:tools="http://schemas.android.com/tools"
-                                        android:id="@+id/drawer_layout"
-                                        tools:openDrawer="left"
-                                        android:layout_width="match_parent"
-                                        android:fitsSystemWindows="true"
-                                        android:background="#ffffff"
-                                        android:layout_height="match_parent"
-        >
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawer_layout"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="#ffffff"
+    android:fitsSystemWindows="true"
+    tools:openDrawer="left">
 
     <android.support.design.widget.CoordinatorLayout
-            android:layout_width="match_parent"
-            android:orientation="vertical"
-            android:layout_height="match_parent"
-            >
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
         <android.support.design.widget.AppBarLayout
-                android:orientation="vertical"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                >
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
             <android.support.v7.widget.Toolbar
-
-                    app:layout_scrollFlags="scroll|enterAlways"
-                    android:layout_width="match_parent"
-                    android:background="?attr/colorPrimary"
-                    android:layout_height="?attr/actionBarSize"
-                    app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-                    android:id="@+id/toolbar"
-                    />
+                android:id="@+id/toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                android:background="?attr/colorPrimary"
+                app:layout_scrollFlags="scroll|enterAlways"
+                app:navigationIcon="?attr/homeAsUpIndicator"
+                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+                app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"></android.support.v7.widget.Toolbar>
 
             <android.support.design.widget.TabLayout
-                    app:tabGravity="fill"
-                    app:tabMode="fixed"
-                    app:tabSelectedTextColor="@color/white"
-                    app:tabTextColor="@color/white"
-                    app:tabIndicatorColor="@color/white"
-                    android:id="@+id/tl"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    />
+                android:id="@+id/tl"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:tabGravity="fill"
+                app:tabIndicatorColor="@color/white"
+                app:tabMode="fixed"
+                app:tabSelectedTextColor="@color/white"
+                app:tabTextColor="@color/white" />
 
         </android.support.design.widget.AppBarLayout>
 
         <android.support.v4.view.ViewPager
-                app:layout_behavior="@string/appbar_scrolling_view_behavior"
-                android:id="@+id/vp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                />
-
+            android:id="@+id/vp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior" />
         <!--<FrameLayout
             android:layout_width="match_parent"
             android:id="@+id/container"
@@ -60,14 +53,15 @@
     </android.support.design.widget.CoordinatorLayout>
 
     <android.support.design.widget.NavigationView
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:id="@+id/navigationView"
-            android:layout_gravity="start"
-            android:background="@color/white"
-            app:itemTextColor="@color/colorPrimary"
-            app:elevation="100dp"
-            app:headerLayout="@layout/headerlayout"
-            app:menu="@menu/drawer_menu"
-            />
+        android:id="@+id/navigationView"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:background="@color/white"
+        android:fitsSystemWindows="true"
+        app:elevation="100dp"
+        app:headerLayout="@layout/headerlayout"
+        app:itemTextColor="@color/navigation_menu_item_background"
+        app:menu="@menu/drawer_menu"
+        app:theme="@style/MenuTextStyle" />
 </android.support.v4.widget.DrawerLayout>
