--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,15 @@
     <color name="white">#ffffff</color>
     <color name="main_theme_color">#03a9f4</color>
     <color name="content_bg">#e0e0e0</color>
+
+    <!--  NavigationView  -->
+    <color name="navigation_item_normal">#757575</color>
+    <color name="navigation_item_pressed">#424242</color>
+    <color name="navigation_item_checked">#424242</color>
+    <color name="navigation_item_focus">#424242</color>
+    <!---->
+
+
+
+
 </resources>
