--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,4 +10,23 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+
+    <!--  NavigationView 的theme -->
+    <style name="MenuTextStyle">
+        <item name="android:textSize">15sp</item>
+    </style>
+
+    <!--  MultiStateView -->
+    <style name="MultipleStatusView" />
+
+    <style name="MultipleStatusView.Content">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_centerInParent">true</item>
+        <item name="android:layout_margin">8dp</item>
+        <item name="android:textColor">#a9b7b7</item>
+        <item name="android:textSize">16sp</item>
+    </style>
+
+
 </resources>
