--- a/app/src/main/res/layout/item_text.xml
+++ b/app/src/main/res/layout/item_text.xml
@@ -1,11 +1,119 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="40dp">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/item_text_text"
+    <android.support.v7.widget.CardView
+        android:id="@+id/item_text_card_item"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="123"/>
+        android:layout_height="wrap_content"
+        app:cardElevation="10dp"
+        app:cardPreventCornerOverlap="true"
+        app:cardUseCompatPadding="true"
+        app:cardCornerRadius="5dp"
+        >
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
+                <com.sgd.zitai.ui.widget.CircleImageView
+                    android:id="@+id/item_text_card_userhead"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:src="@mipmap/test"/>
+                <TextView
+                    android:id="@+id/item_text_card_username"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="25dp"
+                    android:text="juhuacha"/>
+            </LinearLayout>
+            <TextView
+                android:id="@+id/item_text_card_content"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:maxLength="150"
+                android:text="testjuhaudqwdkqdfiewnfqeifnioer20hnf0ienwifvneiowrfgvneiqwnfvpiwnsvenfgvwpeirdnpfvionnvonpdncvpDENWDVDPWNpvnWPEVNPONE"/>
+
+            <android.support.v7.widget.RecyclerView
+                android:visibility="gone"
+                android:id="@+id/item_text_card_pictures"
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal" />
+
+            <LinearLayout
+                android:id="@+id/item_text_card_operatebar"
+                android:layout_width="match_parent"
+                android:layout_height="35dp"
+                android:orientation="horizontal">
+              <!-- <LinearLayout
+                   android:layout_width="0dp"
+                   android:layout_height="match_parent"
+                   android:gravity="center"
+                   android:layout_weight="1">
+                   <CheckBox
+                       android:id="@+id/item_text_card_praise"
+                       android:duplicateParentState="true"
+                       android:layout_width="wrap_content"
+                       android:layout_height="match_parent"
+                       android:drawableLeft="@android:drawable/ic_menu_help"
+                       android:button="@null"
+                       android:text="赞"/>
+               </LinearLayout>-->
+                <com.sgd.zitai.ui.widget.DrawableCenterCheckBox
+                    android:id="@+id/item_text_card_praise"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:drawableLeft="@drawable/item_text_praise"
+                    android:text="juhua"
+                    android:button="@null"/>
+               <!-- <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:layout_weight="1">
+                    <Button
+                        android:id="@+id/item_text_card_comment"
+                        android:drawableLeft="@mipmap"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:text="评论"/>
+                </LinearLayout>-->
+                <com.sgd.zitai.ui.widget.DrawableCenterTextView
+                    android:id="@+id/item_text_card_comment"
+                    android:layout_width="0dp"
+                    android:gravity="left|center_vertical"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:background="#fff"
+                    android:drawableLeft="@android:drawable/ic_menu_help"
+                    android:text="hhah" />
+                <com.sgd.zitai.ui.widget.DrawableCenterTextView
+                    android:id="@+id/item_text_card_share"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:gravity="left|center_vertical"
+                    android:background="#fff"
+                    android:drawableLeft="@android:drawable/ic_menu_help"
+                    android:layout_height="match_parent"
+                    android:text="分享"/>
+            </LinearLayout>
+        </LinearLayout>
+    </android.support.v7.widget.CardView>
 </LinearLayout>
