--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -4,19 +4,19 @@
     <item
         android:id="@+id/action_setting"
         android:orderInCategory="80"
-        android:title="设置"
+        android:title="@string/setting"
         app:showAsAction="withText"
         android:icon="@android:drawable/ic_menu_help"/>
     <item
         android:id="@+id/action_nightmode"
         android:orderInCategory="80"
-        android:title="夜间模式"
+        android:title="@string/night_mode"
         app:showAsAction="withText"
         android:icon="@android:drawable/ic_menu_help"/>
     <item
         android:id="@+id/action_about"
         android:orderInCategory="80"
-        android:title="关于App"
+        android:title="@string/about_app"
         app:showAsAction="withText"
         android:icon="@android:drawable/ic_menu_help"/>
 </menu>
