--- a/app/src/main/res/layout/layout_videolist_item.xml
+++ b/app/src/main/res/layout/layout_videolist_item.xml
@@ -13,14 +13,13 @@
         app:cardElevation="1dp">
 
         <RelativeLayout
+            android:id="@+id/rela_cover"
             android:layout_width="match_parent"
             android:layout_height="200dp">
-
-            <ImageView
-                android:id="@+id/iv_img"
-                android:layout_width="match_parent"
-                android:scaleType="centerCrop"
-                android:layout_height="200dp" />
+         <com.sgd.zitai.ui.widget.VideoPlayerView
+             android:id="@+id/player"
+             android:layout_width="match_parent"
+             android:layout_height="match_parent"></com.sgd.zitai.ui.widget.VideoPlayerView>
 
             <TextView
                 android:id="@+id/tv_author"
@@ -35,6 +34,5 @@
                 android:textSize="20sp"
                 android:textStyle="bold" />
         </RelativeLayout>
-
     </android.support.v7.widget.CardView>
 </LinearLayout>
